fix display on smaller viewport

--- a/static/css/style-about.css
+++ b/static/css/style-about.css
@@ -87,7 +87,7 @@ a {
     grid-column: 3 / -2;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1800px) {
     .wrapper {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
