--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,7 +86,7 @@ a {
     grid-column: 2 / -2;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1800px) {
     .wrapper {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
